EKS/lab-resources/deployment-files/deposit-app-deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: bank-app
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deposit-app
  namespace: bank-app
  labels:
    app: deposit-app
spec:
  selector:
    matchLabels:
      app: deposit-app
  replicas: 2
  template:
    metadata:
      labels:
        app: deposit-app
    spec:
      containers:
      - name: deposit-container
        image: [Enter your deposit app image URI]
        ports:
            - containerPort: 80
        resources:
          limits:
            memory: "100Mi"
            cpu: "200m"
