EKS/lab-resources/deployment-files/mortgage-app-service-ingress-resources.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: bank-app
  name: mortgage-service
  labels:
    app: mortgage-app
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: /mortgage
spec:
  type: NodePort
  selector:
    app: mortgage-app
  ports:
    - port: 80
      targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bank-app-ingress
  namespace: bank-app
  labels:
    app: bank-app
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /mortgage
            pathType: Prefix
            backend:
              service:
                name: mortgage-service
                port:
                  number: 80
          - path: /deposit
            pathType: Prefix
            backend:
              service:
                name: deposit-service
                port:
                  number: 80
